# simple-timer

./: CMakeLists.txt
src/: main.cpp  main_window.cpp  main_window.h  stopwatch_widget.cpp  stopwatch_widget.h  timer_widget.cpp  timer_widget.h
